--- a/playground/variables.html
+++ b/playground/variables.html
@@ -9,7 +9,23 @@
 </head>
 
 <body>
+<script>
+  // function scoped
+  var first = 'Johnny';
+  // block scoped
+  let age = 300;
+  const cool = true;
 
+  const dog = 'bowser';
+  
+  //camel case
+  const iLovePizza = 100;
+  //UpperCamelCase
+  const ILoveToEatHotDogs = false;
+  //snake case
+  const this_is_snake_case = 'cool';
+  
+  </script>
 </body>
 
 </html>
